@@ -398,6 +398,9 @@ Trunk (unreleased changes)
     HADOOP-3064. Commas in a file path should not be treated as delimiters.
     (Hairong Kuang via shv)
 
+    HADOOP-2997. Adds test for non-writable serialier. Also fixes a problem 
+    introduced by HADOOP-2399. (Tom White via ddas)
+
 Release 0.16.2 - Unreleased
 
   BUG FIXES
